# hulubul-broker

./: .gitignore  .importlinter  .linkmllint.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
.opencode/reports/: delegatable-independent-workstreams-analysis.md
architecture/: HANDOVER.md  README.md  agentic-system-blueprint-phase-1.md  agentic-system-blueprint.md  architecture-statement.md  incremental-system-development-strategy.md  non-functional-requirements.md  project-statement.md  raci.md  task-2-frameworks-exploration.md  verification-testing-and-evaluation-strategy.md
architecture/decisions/: README.md
architecture/diagrams/: workflows.md
architecture/reports/deterministic-llm-based-systems/: Deterministic Control Patterns for LLM Agent Systems.md  prompt.md
architecture/specs/: README.md
architecture/use-cases/: README.md  blue-user-goal.md  white-summary.md
infra/: .env.example  README.md  docker-compose.test.yaml  docker-compose.yaml  langflow.env.example
infra/cypher/: demo-queries.cypher  operational-schema.cypher  schema.cypher  seed.cypher
infra/mcp/: Dockerfile  requirements.in  requirements.txt
infra/scripts/: mcp-readiness.py  neo4j-common.sh  neo4j-seed.sh  neo4j-setup-schema.sh
model/: README.md  hulubul-transport.qea
model/linkml/: hulubul.yaml  hulubul_agent.yaml  hulubul_channel.yaml  hulubul_common.yaml  hulubul_feedback.yaml  hulubul_request.yaml  hulubul_service.yaml  hulubul_spatial.yaml
model/modelspecs/: hulubul_v1_access_control.md  hulubul_v1_model_spec.md
openspec/: config.yaml
openspec/changes/deliver-phase-1-request-intake-thread/: .openspec.yaml  brainstorm.md  design.md  plan.md  proposal.md  tasks.md
openspec/changes/deliver-phase-1-request-intake-thread/specs/conversation-request-resumption/: spec.md
openspec/changes/deliver-phase-1-request-intake-thread/specs/delivery-request-intake/: spec.md
openspec/changes/deliver-phase-1-request-intake-thread/specs/domain-state-routing/: spec.md
openspec/changes/deliver-phase-1-request-intake-thread/specs/operational-contract-validation/: spec.md
openspec/changes/deliver-phase-1-request-intake-thread/specs/phase1-flow-runtime/: spec.md
schemas/operational/v1/: data-operation-request.schema.json  data-operation-result.schema.json  delivery-request-snapshot.schema.json  intake-facts.schema.json  intake-input.schema.json  intake-result.schema.json  main-flow-input.schema.json  manifest.json  operational-error.schema.json  router-input.schema.json  router-result.schema.json  routing-context.schema.json
scripts/: check_committed_secrets.py  gen_mermaid_classdiagram.py  gen_neo4j_constraints.py  gen_neomodel.py  gen_operational_schemas.py
scripts/git-hooks/: pre-commit
src/hulubul/: __init__.py
src/hulubul/core/models/operational/: __init__.py  base.py  data_operations.py  enums.py  envelope.py  errors.py  intake.py  routing.py  snapshots.py
src/hulubul/request_intake/: __init__.py
src/hulubul/request_intake/entrypoints/: __init__.py
src/hulubul/request_intake/entrypoints/langflow/: __init__.py
src/hulubul/request_intake/entrypoints/langflow/components/: __init__.py
src/hulubul/request_intake/entrypoints/langflow/components/hulubul/: __init__.py  contract_boundary.py  data_operation_boundary.py  deterministic_renderer.py  execution_envelope.py  retry_decision.py
src/hulubul/request_intake/models/: __init__.py  completeness.py  transitions.py
src/hulubul/request_intake/services/: __init__.py  data_operation_policy.py  graph_identifiers.py  rendering.py  retry_policy.py
tests/: conftest.py
tests/features/: conversation_resumption.feature  delivery_request_intake.feature
tests/fixtures/: __init__.py
tests/fixtures/neo4j/: __init__.py  change1_contexts.py
tests/integration/: __init__.py  conftest.py
tests/integration/langflow/: __init__.py  test_api_authentication.py
tests/integration/neo4j/: __init__.py  test_change1_context_fixtures.py  test_mcp_readiness.py  test_neo4j_testcontainer.py  test_operational_schema.py
tests/integration/runtime/: __init__.py  test_read_only_runtime_assets.py  test_readiness_order.py
tests/static/: test_architecture_boundaries.py  test_ci_workflows.py  test_committed_secrets.py  test_git_hooks.py  test_runtime_pins.py
tests/support/: __init__.py  acceptance_types.py  graph_probe.py  langflow_client.py  mcp_client.py
tests/unit/: test_project_foundation.py
tests/unit/hulubul/core/models/operational/: test_base.py  test_data_operations.py  test_envelope.py  test_errors.py  test_intake.py  test_routing.py  test_snapshots.py  test_wrapped_inputs.py
tests/unit/hulubul/request_intake/: __init__.py
tests/unit/hulubul/request_intake/entrypoints/langflow/components/hulubul/: test_contract_boundary.py  test_data_operation_boundary.py  test_deterministic_renderer.py  test_execution_envelope.py  test_retry_decision.py
tests/unit/hulubul/request_intake/models/: __init__.py  test_completeness.py  test_transitions.py
tests/unit/hulubul/request_intake/services/: __init__.py  test_data_operation_policy.py  test_graph_identifiers.py  test_rendering.py  test_retry_policy.py
