[tool.poetry]
name = "hulubul-broker"
version = "0.1.0"
description = "Hulubul V1 conceptual model and deterministic generators (LinkML)."
authors = ["Meaningfy <eugen@meaningfy.ws>"]
license = "CC-BY-4.0"
# hulubul is the installable application package; the generator scripts stay
# packaged alongside it. The LinkML schemas live under model/linkml.
packages = [
    { include = "hulubul", from = "src" },
    { include = "gen_neo4j_constraints.py", from = "scripts" },
    { include = "gen_neomodel.py", from = "scripts" },
    { include = "gen_mermaid_classdiagram.py", from = "scripts" },
    { include = "gen_operational_schemas.py", from = "scripts" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
linkml = ">=1.9.5"
linkml-runtime = ">=1.9.0,<=1.10.0"
pydantic = "2.12.5"

[tool.poetry.group.langflow]
optional = true

[tool.poetry.group.langflow.dependencies]
lfx = "1.10.2"
onnxruntime = "<1.24"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "8.4.1"
pytest-bdd = "8.1.0"
pytest-cov = "7.0.0"

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
httpx = "0.28.1"
neo4j = "5.28.2"
testcontainers = {version = "4.10.0", extras = ["neo4j"]}

[tool.poetry.group.quality]
optional = true

[tool.poetry.group.quality.dependencies]
import-linter = "2.3"
ruff = "0.12.5"
mypy = "1.17.1"
tox = "4.28.4"

[tool.poetry.scripts]
gen-neo4j-constraints = "gen_neo4j_constraints:cli"
gen-neomodel = "gen_neomodel:cli"
gen-mermaid-classdiagram = "gen_mermaid_classdiagram:cli"
gen-operational-schemas = "gen_operational_schemas:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--strict-config --strict-markers --cov-report=xml"
testpaths = ["tests"]
markers = ["integration", "system", "evaluation", "live_model"]

[tool.coverage.run]
branch = true
source = ["hulubul"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "SIM117"]

[tool.mypy]
python_version = "3.10"
strict = true
explicit_package_bases = true
